# sqlapydantic

./: .gitignore  CHANGLOG.md  LICENSE  README.md  pyproject.toml
sqlapydantic/: __init__.py  constants.py  generator.py  mapper.py  models.py  utils.py
tests/: constraints.py  generate.py  strict_types.py
