[tool.poetry]
name = "sqlapydantic"
version = "0.1.0"
description = ""
authors = ["maacck <c.mai@madainchina.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^2.0.13"
pydantic = "^1.10.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
