[tool.poetry]
name = "sqlapydantic"
version = "0.0.2"
description = "Generate pydantic models from SQLAlchemy models"
authors = ["maacck <c.mai@madainchina.com>"]
readme = "README.md"
homepage = "https://github.com/maacck/sqlapydantic"
repository = "https://github.com/maacck/sqlapydantic"
keywords = ["pydantic", "sqlalchemy"]
packages = [{ include = "sqlapydantic" }]
include = ["CHANGELOG.md", "README.md"]

[tool.poetry.urls]
"BUG TRACKER" = "https://github.com/maacck/sqlapydantic/issues"



[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^2.0.13"
pydantic = "2.0.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
